// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`wilson(40, 100, undefined, false, true) 1`] = `
Object {
  "center": "0.40369934977360109507",
  "high": "0.50299643878127279972",
  "low": "0.30478007165105873939",
}
`;

exports[`wilson(40,100) 1`] = `
Object {
  "center": "0.40369934977360109507",
  "high": "0.49799741256064922151",
  "low": "0.30940128698655296863",
}
`;
